# event-store-benchmark

./: .gitignore  Cargo.toml  Makefile  README.md
.github/ISSUE_TEMPLATE/: theory.yml
.github/workflows/: benchmark-factdb-in-docker.yml  benchmark.yml  kurrentdb-clients.yml  kurrentdb-testclient.yml  scaling-binaries.yml  scaling-dcb.yml  scaling-in-docker.yml  scaling-postgres.yml  scaling-streams-in-docker.yml  scaling-streams-in-postgres.yml  scaling-streams.yml  smoke-test.yml  theory-state-machine.yml  writeflood.yml
configs/: axonserver-local.yaml  baseline-reads-r16.yaml  baseline-reads-r4.yaml  baseline-writes-w1.yaml  baseline-writes-w16.yaml  baseline-writes-w4.yaml  concurrent_readers.yaml  concurrent_writers.yaml  fact-bench-server.yaml  heavy-reads-zipf-r16.yaml  heavy-writes-zipf-w4.yaml  kurrentdb-local.yaml  mixed-balanced-50-50.yaml  mixed-read-heavy-70-30.yaml  mixed-write-heavy-30-70.yaml  quick-binaries.yaml  quick-docker.yaml  quick-scaling-streams-in-docker.yaml  quick-scaling-streams-in-postgres.yaml  quick-writeflood.yaml  scaling-binaries.yaml  scaling-dcb.yaml  scaling-in-docker.yaml  scaling-local.yaml  scaling-marten.yaml  scaling-postgres.yaml  scaling-streams-in-docker.yaml  scaling-streams-in-postgres.yaml  scaling-streams.yaml  scaling-writers.yaml  scaling.yaml  smoke-test.yaml  umadb-local.yaml  writeflood.yaml
configs/scaling/: event-size.yaml  readers.yaml  writers.yaml
configs/scenarios/: audit-log.yaml  cqrs-read-model.yaml  high-throughput-ingestion.yaml  microservices-aggregate.yaml
env-check/: Dockerfile  Makefile  README.md  check_env.sh
python/: kurrentdb_benchmark.py  kurrentdb_testclient_plots.py  report_generator.py  requirements.txt
python/report_generator/: data_loader.py  environment_info.py  main.py  models.py
python/report_generator/reporting/: html.py  plotting.py  style.py
python/report_generator/reporting/performance_pipeline/: __init__.py  builder.py  image_generation.py  models.py  render_html.py  session_pipeline.py  spec.py
python/report_generator/workloads/: base.py  performance.py
rust/: Cargo.toml
rust/adapters/axonserver/: Cargo.toml
rust/adapters/axonserver/src/: lib.rs
rust/adapters/dummy/: Cargo.toml
rust/adapters/dummy/src/: lib.rs
rust/adapters/eventsourcingdb/: Cargo.toml
rust/adapters/eventsourcingdb/src/: lib.rs
rust/adapters/fact/: Cargo.toml  build.rs
rust/adapters/fact/protos/: fact_bench.proto
rust/adapters/fact/src/: lib.rs
rust/adapters/kurrentdb/: Cargo.toml
rust/adapters/kurrentdb/src/: lib.rs
rust/adapters/marten/: Cargo.toml
rust/adapters/marten/src/: lib.rs
rust/adapters/py-eventsourcing/: Cargo.toml
rust/adapters/py-eventsourcing/src/: lib.rs
rust/adapters/umadb/: Cargo.toml
rust/adapters/umadb/src/: lib.rs
rust/analytics/: Cargo.toml
rust/analytics/src/: aggregation.rs  lib.rs  report.rs  scanner.rs  session.rs  templates.rs
rust/axonserver-client/: Cargo.toml  build.rs
rust/axonserver-client/src/: lib.rs
rust/bench-core/: Cargo.toml
rust/bench-core/src/: adapter.rs  common.rs  container_stats.rs  lib.rs  metrics.rs  process_stats.rs  runner.rs  system_info.rs  workflow_strategy.rs  workload.rs
rust/bench-core/src/workflows/: concurrent_readers.rs  concurrent_writers.rs
rust/bench-core/src/workloads/: concurrent_readers.rs  concurrent_writers.rs  consistency.rs  durability.rs  factory.rs  mod.rs  operational.rs  performance.rs  runner.rs
rust/cli/: Cargo.toml
rust/cli/src/: main.rs
rust/kurrentdb-benchmark/: Cargo.toml
rust/kurrentdb-benchmark/src/: main.rs  minimal.rs
rust/kurrentdb-fork/: Cargo.toml  README.md  codegen.rs
rust/kurrentdb-fork/protos/: streams.proto
rust/kurrentdb-fork/src/: batch.rs  client.rs  commands.rs  grpc.rs  lib.rs  minimal_client.rs  projection_client.rs  request.rs  server_features.rs  types.rs
rust/kurrentdb-fork/src/event_store/: client.rs  generated.rs  mod.rs
rust/kurrentdb-fork/src/http/: mod.rs  persistent_subscriptions.rs
rust/kurrentdb-fork/src/operations/: gossip.rs  mod.rs
rust/kurrentdb-fork/src/options/: append_to_stream.rs  delete_stream.rs  read_all.rs  subscribe_to_stream.rs  tombstone_stream.rs
rust/kurrentdb-fork/tests/: common.rs  images.rs  integration.rs
rust/kurrentdb-fork/tests/api/: operations.rs  persistent_subscriptions.rs  projections.rs  streams.rs
rust/kurrentdb-fork/tests/fixtures/connection_string/: mockups.toml
rust/kurrentdb-fork/tests/misc/: mod.rs  root_certificates.rs
rust/kurrentdb-fork/tests/plugins/: mod.rs  user_certificates.rs
rust/marten-rs/: Cargo.toml
rust/marten-rs/src/: append.rs  dcb.rs  lib.rs  read.rs  schema.rs
rust/py-eventsourcing/: Cargo.toml
rust/py-eventsourcing/rust/py-eventsourcing/src/: lib.rs
rust/py-eventsourcing/src/: lib.rs
rust/testcontainers/: Cargo.toml
rust/testcontainers/src/: axonserver.rs  eventsourcingdb.rs  fact.rs  kurrentdb.rs  lib.rs  marten.rs  py_eventsourcing.rs  umadb.rs
scripts/: run_and_report.sh
