[workspace]
members = [
    "rust/bench-core",
    "rust/adapters/umadb",
    "rust/adapters/dummy",
    "rust/adapters/kurrentdb",
    "rust/testcontainers",
    "rust/adapters/eventsourcingdb",
    "rust/adapters/fact",
    "rust/adapters/marten",
    "rust/cli",
    "rust/kurrentdb-benchmark",
    "rust/marten-rs",
    "rust/py-eventsourcing",
    "rust/adapters/py-eventsourcing",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
