[package]
name = "bench-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
hdrhistogram = { version = "7" }
rand = "0.10"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs", "process", "sync", "signal"] }
tokio-util = { version = "0.7" }
uuid = { version = "1.8", features = ["v4"] }
bollard = "0.20"
num_cpus = "1"
sysinfo = "0.33"
memory-stats = "1.2"
