[package]
name = "kurrentdb-benchmark"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kurrentdb-benchmark-official"
path = "src/main.rs"

[[bin]]
name = "kurrentdb-benchmark-minimal"
path = "src/minimal.rs"

[dependencies]
kurrentdb = { path = "../kurrentdb-fork" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
hdrhistogram = "7.5"
