[package]
name = "marten-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-serde_json-1", "with-chrono-0_4"] }
uuid = { version = "1", features = ["v4"] }
serde_json = "1"
futures-util = "0.3"
chrono = { version = "0.4.44", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serial_test = "3.1.1"
