[package]
name = "py-eventsourcing"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"
anyhow = "1.0"
postgres-types = { version = "0.2", features = ["derive"] }

[dev-dependencies]
serial_test = "3.1"
