[package]
name = "fact-adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bench-core = { path = "../../bench-core" }
bench-testcontainers = { path = "../../testcontainers" }
prost = "0.14"
tonic = { version = "0.14", features = ["tls-aws-lc", "tls-native-roots", "codegen"] }
tonic-prost = "0.14"
testcontainers = "0.27"
tokio = { version = "1", features = ["time"] }

[build-dependencies]
tonic-prost-build = "0.14"
