[package]
name = "marten-adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bench-core = { path = "../../bench-core" }
marten-rs = { path = "../../marten-rs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1"
bench-testcontainers = { path = "../../testcontainers" }
testcontainers = "0.27"
tokio-postgres = "0.7"
uuid = { version = "1", features = ["v4"] }
