[package]
name = "py-eventsourcing-adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bench-core = { path = "../../bench-core" }
bench-testcontainers = { path = "../../testcontainers" }
py-eventsourcing = { path = "../../py-eventsourcing" }
tokio-postgres = "0.7"
serde_json = "1"
testcontainers = "0.27"
tokio = { version = "1", features = ["time"] }
url = "2"
