[package]
name = "postgres-dcb-ttcte-adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bench-core = { path = "../../bench-core" }
bench-testcontainers = { path = "../../testcontainers" }
postgres-dcb-ttcte = { path = "../../postgres-dcb-ttcte" }
tokio-postgres = "0.7"
serde_json = "1"
testcontainers = "0.27"
tokio = { version = "1", features = ["time"] }
url = "2"
